Support multiple touch pointers

There was an issue when we handled multiple touch pointer actions.
SyntheticPointerAction should handle different actions from multiple
touch pointers.

Bug: 856638
Change-Id: I771181bcfe452631074c95874fd5c1a7807d3e74
Reviewed-on: https://chromium-review.googlesource.com/1113898
Commit-Queue: Lan Wei <lanwei@chromium.org>
Reviewed-by: Ella Ge <eirage@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570829}
Former-commit-id: 0e114bd492826a638c43acd6d9e4c3d050d0671e