content/common/input/synthetic_web_input_event_builders.cc
@@ -166,21 +166,26 @@ SyntheticWebTouchEvent::SyntheticWebTouchEvent() : WebTouchEvent() {
 
 void SyntheticWebTouchEvent::ResetPoints() {
   int activePointCount = 0;
-  for (unsigned int i = 0; i < touches_length; ++i) {
+  unsigned count = 0;
+  for (unsigned int i = 0; i < kTouchesLengthCap; ++i) {
     switch (touches[i].state) {
       case WebTouchPoint::kStatePressed:
       case WebTouchPoint::kStateMoved:
       case WebTouchPoint::kStateStationary:
         touches[i].state = WebTouchPoint::kStateStationary;
         ++activePointCount;
+        ++count;
         break;
       case WebTouchPoint::kStateReleased:
       case WebTouchPoint::kStateCancelled:
         touches[i] = WebTouchPoint();
+        ++count;
         break;
       case WebTouchPoint::kStateUndefined:
         break;
     }
+    if (count >= touches_length)
+      break;
   }
   touches_length = activePointCount;
   type_ = WebInputEvent::kUndefined;
